@@ -1,3 +1,8 @@
+Tue Dec  9 11:18:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsstring.h src/apps/freebcp.c src/odbc/native.c:
+	* src/odbc/odbc.c src/pool/config.c src/tds/config.c:
+	- remove some severe warnings
+
 Mon Dec  8 12:03:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c: remove some warnings
 
